<resources>
    <string name="app_name">LoveMeSomeDatacom</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menu_item_about">About</string>


    <string name="fa_search_icon">&#xf002; Find my Teacher</string>
    <string name="fa_calendar_icon">&#xf073; Calendar Cancellations</string>
    <string name="fa_add_to_calendar_icon">&#xf271; Add To Calendar</string>
    <string name="fa_notes_icon">&#xf040; Notes</string>
    <string name="fa_sun_icon">&#xf185; Weather</string>
    <string name="fa_grades_icon">&#xf19d; Academic Calendar</string>
    <string name="fa_thermometer_icon">&#xf2c7; Current Temperature</string>
    <string name="fa_users_icon">&#xf0c0; Find Friends</string>
    <string name="fa_clock_icon">&#xf017; Who\'s Free</string>


    <string name="connection_error">connection error</string>
    <string name="xml_error">Can not parse xml</string>
    <string name="page_title">Async test</string>
    <string name="updated">UPDATED</string>


    <string name="about_message">The following application is the final project of our
    Mobile Software Development course.</string>
    <string name="course_id">420–518-DW MOBILE SOFTWARE DEVELOPMENT</string>
    <string name="member_names"> Rhai Hinds, Eric Hughes, Amin Manai, Sebastien Ramirez </string>
    <string name="picture_one_blurb">Rhai Hinds, Grad Dawson CS 2018</string>
    <string name="picture_two_blurb">Eric Hughes, Grad Dawson CS 2018</string>
    <string name="picture_three_blurb">Amin "Chico" Manai, Grad Dawson CS 2018</string>
    <string name="picture_four_blurb">Sebastian Ramirez, Grad Dawson CS 2018</string>
    <string name="weatherButton">Generate Weather</string>

    <string-array name="iso_array">
        <item>CA</item>
        <item>US</item>
    </string-array>
    <string name="note_details_string">sample note title</string>


    <string-array name="whos_free_day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_discard_string">You sure you want to discard?</string>
    <string name="discard_pop_up_dialog">All of your settings won\'t be saved</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="date_last_updated">Date Last Modified</string>
    <string name="Fall">Fall</string>
    <string name="Winter">Winter</string>
    <string name="Year">Year</string>
    <string name="submit">Submit</string>
    <string name="delete_button">Delete</string>

    <!--Teacher module related strings-->
    <string name="search_first_title">First Name</string>
    <string name="search_last_title">Last Name</string>
    <string name="search_teacher">Search</string>
    <string name="radio_like">Search for similar results</string>
    <string name="radio_exact">Search for exact results</string>
    <string name="from">from: </string>
    <string name="teacher_name">Name: </string>
    <string name="teacher_email">Email: </string>
    <string name="teacher_office">Office: </string>
    <string name="teacher_local">Local: </string>
    <string name="teacher_website">Website: </string>
    <string name="teacher_bio">Bio: </string>

    <!--titles for each screen-->
    <string name="notes_activity_title">Notes</string>
    <string name="calendar_cancel_activity_title">Calendar Cancelations</string>
    <string name="find_my_teacher_activity_title">Find My Teacher</string>
    <string name="add_to_calendar_activity_title">Add To Calendar</string>
    <string name="weather_activity_title">Weather</string>
    <string name="academic_calendar_activity_title">Academic Calendar</string>
    <string name="settings_calendar_activity_title">Settings</string>
    <string name="about_activity_title">About</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>

    <string name="permission_toast">Sorry! Permission denied :(</string>
    <string name="connectivity_toast">No connectivity found :(</string>
    <string name="notes_activity_tag">NotesActivity</string>
    <string name="yes_confirmation">Yes</string>
    <string name="no_confirmation">No</string>
    <string name="settings_saved_toast">Settings Saved</string>
    <string name="settings_activity_tag">SettingsActivity</string>

    <string name="friend_fname">First Name: </string>
    <string name="friend_lname">Last Name: </string>
    <string name="friend_email">Email: </string>

    <string name="whosFreeFindBtn">Find</string>
    <string name="whos_free_title">Whos Free</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="no_avail">No one available</string>
    <string name="friend_busy">All friends are in class right now.</string>
    <string name="no_cancell">No Cancellations</string>
    <string name="no_cancell_msg">There are no cancelled classes</string>

    <string name="where_friend">Where is</string>
    <string name="ok_button">Ok</string>
    <string name="unknown">Unknown Whereabouts</string>
    <string name="is_in">is in class: </string>
    <string name="section">section: </string>
    <string name="right_now">right now.</string>
    <string name="no_friends">No friend location available at this time</string>
    <string name="new_note_str">New note</string>
    <string name="new_note_body">Please add a note here</string>
    <string name="add_str">Add</string>
    <string name="event_created_successfully">Event saved to Calendar Success</string>

</resources>
