<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.SearchView
        android:id="@+id/firstNameSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.SearchView
        android:id="@+id/lastNameSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/searchTeacherButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onSearch"
        android:text="@string/search_teacher"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioSearchGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/likeRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radio_like" />

        <RadioButton
            android:id="@+id/exactRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_exact" />

    </RadioGroup>


</LinearLayout>