<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.lovemesomedatacom.AcademicCalendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/etAcademicYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:imeOptions="actionSearch"
            android:hint="@string/Year"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />

        <RadioGroup
            android:id="@+id/semesterRdioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdioBtnFall"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"

                android:text="@string/Fall" />

            <RadioButton
                android:id="@+id/rdioBtnWinter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/Winter" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGray"

            android:id="@+id/webViewAcademicCalendar"/>
    </LinearLayout>

</LinearLayout>
